# Ampersand

./: .browserslistrc  .gitignore  AGENTS.md  CONTRIBUTING.md  PKGBUILD  README.md  build_playstore.sh  capacitor.config.ts  eslint.config.js  eslint.config.mjs  funding.json  index.html  make_altstore_json.mjs  make_unsigned_ipa.sh  package.json  rsbuild.config.ts  tsconfig.json  tslint.json  upgrade-vcs.mjs  vite.config.ts
.github/: FUNDING.yml
.github/issue_template/: bug_report.yml
.github/workflows/: build-android.yml  build-ios.yml  build-pc.yml  build.yml  dev-build-keepalive.yml  github-pages.yml
.well-known/: funding-manifest-urls
android/: capacitor.settings.gradle
android/app/: build.gradle  capacitor.build.gradle
assets/migrations/: 00_init.sql  01_nullable_post_member_and_title.sql  02_presence_entries.sql  03_members_have_systems.sql
metadata/en-US/: full_description.txt  short_description.txt
public/: ampersand.webmanifest
src/: App.vue  app.ts  env.d.ts  main.ts  router.ts
src-tauri/: .rustfmt.toml  Cargo.toml  Entitlements.plist  Info.ios.plist  rust-toolchain.toml  tauri.conf.json  tauri.ios.debug.conf.json
src-tauri-plugin/: Cargo.toml
src-tauri-plugin/android/: .gitignore  build.gradle.kts
src-tauri-plugin/android/src/main/java/: AmpersandPlugin.kt  AmpersandSingleton.kt
src-tauri-plugin/ios/: Package.swift
src-tauri-plugin/ios/Sources/: AmpersandPlugin.swift
src-tauri-plugin/permissions/: default.toml
src-tauri-plugin/permissions/autogenerated/commands/: list_assets.toml
src-tauri-plugin/src/: commands.rs  error.rs  lib.rs  mobile.rs
src-tauri/capabilities/: ampersand.json  default.json  mobile-android.json  mobile.json
src-tauri/icons/: icon.icns  iconAssets.car
src-tauri/plugin/: Cargo.toml  build.rs
src-tauri/plugin/android/: build.gradle.kts
src-tauri/plugin/android/src/main/java/: AmpersandPlugin.kt
src-tauri/plugin/ios/Sources/: AmpersandPlugin.swift
src-tauri/plugin/permissions/: default.toml
src-tauri/plugin/permissions/autogenerated/: reference.md
src-tauri/plugin/permissions/autogenerated/commands/: broadcast_event.toml  db_migrate_old.toml  db_run_migrations.toml  db_test.toml  dismiss_splash.toml  exit_app.toml  get_webkit_version.toml  init_db.toml  migrate_old_db.toml  open_file.toml  run_db_migrations.toml  set_can_go_back.toml  test_db.toml
src-tauri/plugin/permissions/schemas/: schema.json
src-tauri/plugin/src/: commands.rs  db.rs  desktop.rs  error.rs  lib.rs  mobile.rs
src-tauri/plugin/src/db/: mod.rs
src-tauri/plugin/src/db/types/: mod.rs  msgpack.rs  sql.rs  ts.rs
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs
src-tauri/src/db/: mod.rs  util.rs
src-tauri/src/db/commands/: general.rs  mod.rs
src-tauri/src/db/types/: msgpack.rs  ts.rs
src/assets/: credits.md  emojis.json
src/components/: AssetFonts.vue  AssetItem.vue  Avatar.vue  AvatarStack.vue  CollapsibleHeaderbar.vue  Color.vue  ConsoleLog.vue  ContentEditable.vue  Cover.vue  DatePopupPicker.vue  DatetimeUtc.vue  FrontingEntryInList.vue  InfiniteLoader.vue  InfiniteScroll.vue  JournalChip.vue  JournalPostCard.vue  JournalPostItem.vue  MD3SegmentButton.vue  Markdown.vue  MarkdownAccordion.vue  MarkdownField.vue  MarkdownFontFamily.vue  MarkdownImage.vue  MarkdownLink.vue  MarkdownSvg.vue  Marquee.vue  MemberInList.vue  Mermaid.vue  MessageBoardCard.vue  ModalContainer.vue  NotDoneYet.vue  PopupPicker.vue  PresenceRating.vue  ResourceCard.vue  Spinner.vue  SpinnerFullscreen.vue  SpinnerOld.vue  StoragePersistenceMissing.vue  Svg.vue  SystemChip.vue  (+4 more)
src/lib/: applock.ts  assetFonts.ts  console.ts  darkmode.ts  fileref.ts  filterQuery.ts  filterquery.ts  globalEvents.ts  i18n.ts  json.ts  liveQueries.ts  markdown.ts  mime.ts  modals.ts  mode.ts  notifications.ts  search.ts  serialization.ts  types.d.ts  update.ts
src/modals/: AnalyticsDetail.vue  BoardComments.vue  BoardMessageEdit.vue  Comments.vue  CustomFieldEdit.vue  CustomFieldsSelect.vue  DashboardSettings.vue  FilterQueryEdit.vue  FilterQuerySelect.vue  FrontingEntryComments.vue  FrontingEntryEdit.vue  JournalOptions.vue  Loading.vue  MemberEdit.vue  MemberSelect.vue  NoteEdit.vue  PollResults.vue  PostComments.vue  PresenceAdd.vue  PresenceEdit.vue  PresenceHistory.vue  ReminderEdit.vue  SystemSelect.vue  TabSettings.vue  TagDescription.vue  TagEdit.vue  TagListSelect.vue
src/router/: edit.ts  index.ts  lists.ts  onboarding.ts  options.ts  settings.ts  standaloneRoutes.ts  tabbedRoutes.ts
src/styles/: animations.css  fonts.css  ios-steps.css  ios.css  markdown.css  override.css
src/views/: Chats.vue  Dashboard.vue  DatabaseIsLoading.vue  Journal.vue  LockView.vue  Members.vue  Options.vue  TabbedHomeView.vue  TestingGrounds.vue
translations/: en.json
translations/de/: about.json  accessibility.json  analytics.json  appSettings.json  assetManager.json  chats.json  customFields.json  dashboard.json  filterQueries.json  frontHistory.json  importExport.json  journal.json  lock.json  members.json  messageBoard.json  notes.json  onboarding.json  options.json  other.json  reminders.json  resources.json  security.json  systemSettings.json  systems.json  tagManagement.json
translations/en-Genz/: accessibility.json  appSettings.json  dashboard.json  frontHistory.json  importExport.json  journal.json  lock.json  members.json  onboarding.json  options.json  other.json  resources.json  systems.json  tagManagement.json
translations/en-x-furry/: about.json  accessibility.json  appSettings.json  assetManager.json  customFields.json  dashboard.json  dayjs.js  frontHistory.json  importExport.json  journal.json  lock.json  members.json  messageBoard.json  onboarding.json  other.json  reminders.json  resources.json  security.json  systems.json  tagManagement.json
translations/en-x-genz/: about.json  accessibility.json  appSettings.json  assetManager.json  customFields.json  dashboard.json  frontHistory.json  importExport.json  journal.json  lock.json  members.json  messageBoard.json  onboarding.json  options.json  other.json  reminders.json  resources.json  (+3 more)
(+907 files in other folders)
