[package]
name = "tauri-plugin-ampersand"
version = "0.2.1"
authors = ["nao"]
description = "Tauri plugin for Ampersand"
edition = "2021"
rust-version = "1.95.0"
links = "tauri-plugin-ampersand"

[dependencies]
tauri = "2.11.1"
serde = "1"
thiserror = "2"
tauri-plugin-opener = "2.5.4"

[build-dependencies]
tauri-plugin = { version = "2.6.1", features = ["build"] }
