[package]
name = "ampersand"
version = "0.2.1"
description = "Tracking app for people with complex dissociative disorders"
authors = ["nao"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.95.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ampersand"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
debug = ["tauri/devtools"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-store = "2.4.2"
tauri-plugin-fs = "2.5.0"
tauri-plugin-os = "2.3.2"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-opener = "2.5.3"
tauri-plugin-http = "2.5.8"
tauri-plugin-process = "2.3.1"
tauri-plugin-notifications = "0.4"
tauri-plugin-ampersand = { path = "./plugin" }

[target.'cfg(target_os = "android")'.dependencies]
tauri-plugin-m3 = "0.3.2"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-biometric = "2.3.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.4.1"
