[package]
name = "ampersand"
version = "0.2.1"
description = "Tracking app for people with complex dissociative disorders"
authors = ["nao"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.95.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ampersand"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
debug = ["tauri/devtools"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.0", features = [] }
tauri-plugin-store = "2.4.3"
tauri-plugin-fs = "2.5.1"
tauri-plugin-os = "2.3.2"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-opener = "2.5.4"
tauri-plugin-http = "2.5.9"
tauri-plugin-process = "2.3.1"
tauri-plugin-notifications = { git = "https://github.com/Choochmeque/tauri-plugin-notifications.git" }
tauri-plugin-ampersand = { path = "./plugin" }

[target.'cfg(target_os = "android")'.dependencies]
tauri-plugin-m3 = "0.3.2"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-biometric = "2.3.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.4.2"

[target.'cfg(all(not(dev), target_os = "macos"))'.dependencies]
tauri-plugin-notifications = { git = "https://github.com/Choochmeque/tauri-plugin-notifications.git", default-features = false }

