[package]
name = "ampersand"
version = "0.3.0-rc6"
description = "Tracking app for people with complex dissociative disorders"
authors = [ "nao" ]
license = ""
repository = ""
edition = "2021"
rust-version = "1.95.0"

[lib]
name = "ampersand"
crate-type = [ "staticlib", "cdylib", "rlib" ]

[features]
debug = [ "tauri/devtools" ]
dev_mac = [ "tauri-plugin-notifications/notify-rust" ]

[build-dependencies.tauri-build]
version = "2.6.2"
features = []

[dependencies]
serde_json = "1.0"
log = "0.4"
tauri-plugin-fs = "2.5.1"
tauri-plugin-os = "2.3.2"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-opener = "2.5.4"
tauri-plugin-http = "2.5.9"
tauri-plugin-process = "2.3.1"
tauri-plugin-notifications = { version = "0.5.0-rc.7", default-features = false }

[dependencies.serde]
version = "1.0"
features = [ "derive" ]

[dependencies.tauri]
version = "2.11.2"
features = [ "macos-private-api" ]

[dependencies.tauri-plugin-ampersand]
path = "../src-tauri-plugin"

[target.'cfg(target_os = "linux")'.dependencies.tauri-plugin-notifications]
version = "0.5.0-rc.7"
default-features = true

[target.'cfg(target_os = "android")'.dependencies]
tauri-plugin-m3 = "0.3.2"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-biometric = "2.3.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.4.2"
