[package]
name = "tauri-plugin-ampersand"
version = "0.1.11"
authors = ["nao"]
description = "Tauri plugin for Ampersand"
license = "AGPL-3.0-only"
repository = "https://codeberg.org/Ampersand/app"
edition = "2024"
rust-version = "1.93.0"
links = "tauri-plugin-ampersand"

[dependencies]
tauri = "2.10.2"
serde = "1"
thiserror = "2"

tauri-plugin-fs = "2.4.5"
tauri-plugin-opener = "2.5.3"

[build-dependencies]
tauri-plugin = { version = "2.5.3", features = ["build"] }
